[project]
name = "wp-content-engine"
version = "0.1.0"
description = "A wp-content-engine agent that writes blog posts and autonomously pushes them to WordPress."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ddgs>=9.10.0",
    "langchain>=1.2.10",
    "langchain-openrouter>=0.0.2",
    "langgraph>=1.0.9",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]
